--- a/data/landing.yaml
+++ b/data/landing.yaml
@@ -13,7 +13,7 @@ hero:
       mobile: "gradient-mobile.webp"
 
   badge:
-    text: v0.1.0
+    text: v0.1.0-beta
     color: primary # primary, secondary, success, danger, warning, info, light, dark
     pill: false # boolean
     soft: true # boolean
@@ -30,7 +30,7 @@ hero:
   image:
     path: "images" # path to image under configured assets directory. default 'images'
     filename: "chapar_screenshot.png" # filename of your hero image (including file extension)
-    alt: "Chpar Screenshot" # Optional but recommended
+    alt: "Chapar Screenshot" # Optional but recommended
     boxShadow: true # default 'false' (excludes .svg images)
     rounded: true # round the image corners? default 'false' (excludes .svg images)
 
@@ -42,7 +42,7 @@ hero:
   cta2Button:
     icon: construction
     btnText: "In Development"
-    url: "https://github.com/mirzakhany/chapar"
+    url: "https://github.com/chapar-rest/chapar"
 
   info: "**Open Source** BSD-3-Clause licensed."
 
