--- a/hugo.toml
+++ b/hugo.toml
@@ -79,6 +79,7 @@ title = 'Chapar'
         intLinkTooltip  = true                                # Enable a tooltip for internal links that displays info about the destination? default false
         # extLinkNewTab   = false                             # Open external links in a new Tab? default true
         # logoLinkURL = ""                                    # Set a custom URL destination for the top header logo link.
+        darkMode        = true                                # Enable dark mode? default false
 
 
     [params.flexsearch] # Parameters for FlexSearch
