--- a/data/landing.yaml
+++ b/data/landing.yaml
@@ -25,7 +25,7 @@ hero:
     height: 80px
 
   title: "Chapar"
-  subtitle: Chapar is an upcoming native API testing tool built with GoLang, designed to simplify and expedite the testing process for developers. While still in its early beta phase, Chapar aims to offer a user-friendly experience with support for both HTTP and gRPC protocols with.
+  subtitle: Chapar is an upcoming native API testing tool built with Go, designed to simplify and expedite the testing process for developers. While still in its early beta phase, Chapar aims to offer a user-friendly experience with support for both HTTP and gRPC protocols with.
 
   image:
     path: "images" # path to image under configured assets directory. default 'images'
@@ -54,12 +54,12 @@ featureGrid:
   template: feature grid
 
   title: Why choose Chapar?
-  subtitle: Chapar is an open source api testing tools built with Golang wiht goal of respcting your privacy and security. It is designed to be simple, fast and easy to use.
+  subtitle: Chapar is an open source api testing tools built with Go with goal of respcting your privacy and security. It is designed to be simple, fast and easy to use.
 
   items:
     - title: Fast
       icon: speed
-      description: Chapar built with GoLang, which is known for its speed and performance. It is designed to be fast and efficient.
+      description: Chapar built with Go, which is known for its speed and performance. It is designed to be fast and efficient.
       ctaLink:
         text: learn more
         url: /docs/
